--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@
     ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
     monospace;
   --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
+  --card: oklab(100% 0 -0.00011);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
